dotnet-quote/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-quote
spec:
  type: ClusterIP
  selector:
    app: dotnet-quote
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
